--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
@@ -6,7 +6,7 @@
 |-------------------------------|----------------------------------------------|
 | 备租户个数限制                  | 无限制                                       |
 | 主租户和备租户异构              | 不支持主租户与备租户使用不同的 `UNIT_NUM` 配置   |
-| 主备租户配置项修改是否同步       | 主租户所在集群修改配置项后不会影响备租户所在集群的配置项  |
+| 主备租户配置项修改是否同步       | 主租户与备租户的配置项相互独立，不会物理同步。如果修改了主租户的配置项，需要评估是否需要修改备租户的配置项  |
 | 主备租户系统变量修改是否同步     | 主租户修改系统变量后，备租户的系统变量会同步修改       |
 | Switchover 限制                | 备切主要求所有 Server 在线                        |
 | Failover 限制                  | 要求所有 Server 在线                                    |
