--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/2.rule-based-path-selection.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/1.access-path/2.rule-based-path-selection.md
@@ -90,7 +90,7 @@ Q1:
 obclient> SELECT b,c FROM test WHERE (b = 1 OR b = 2) AND (c = 1 OR c =2);
 
 Q2: 
-obclient> SELECT * FROM test WHERE (c = 1 OR c =2) OR (d = 1 OR d = 2);
+obclient> SELECT * FROM test WHERE (c = 1 OR c =2) AND (d = 1 OR d = 2);
 ```
 
 ## Skyline 剪枝规则
