修改 3.oceanbase-cloud-platform.md

--- a/zh-CN/7.reference/6.oceanbase-tools/3.oceanbase-cloud-platform.md
+++ b/zh-CN/7.reference/6.oceanbase-tools/3.oceanbase-cloud-platform.md
@@ -1,4 +1,4 @@
-# OceanBase 云平台
+# OceanBase 云平台（OCP）
 
 OceanBase 云平台（OceanBase Cloud Platform，OCP）伴随 OceanBase 数据库而生，是一款以 OceanBase 为核心的企业级数据库管理平台。
 
