社区版部署文档优化

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -1,5 +1,12 @@
 # 使用命令行部署 OceanBase 数据库生产环境
 
+本文介绍如何通过 OBD 黑屏命令行方式部署 OceanBase 数据库生产环境。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>OBD 除了支持通过命令行方式部署 OceanBase 数据库生产环境外，也支持通过白屏部署 OceanBase 集群环境。推荐您通过 OBD 白屏方式进行部署，详细操作步骤请参考 <a href="4.deploy-by-ui/1.deploy-by-obd.md">通过 OBD 白屏部署 OceanBase 集群</a>。</p>
+</main>
+
 ## 名词解释
 
 * 中控机器
@@ -12,15 +19,15 @@
   
 * OBD
 
-  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001690019)。
+  OceanBase Deployer，OceanBase 集群安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001690019)。
   
 * ODP
 
-  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBD（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982768)
+  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBD（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/community-odp-cn-10000000001717354)。
 
 * OCP Express
   
-  基于 Web 的 Oceanbase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。
+  基于 Web 的 Oceanbase 数据库 4.x 管理工具，融合在 OceanBase 数据库集群中，支持对数据库集群关键性能及基本数据库管理功能。详细信息请参考 [OceanBase 云平台 Express (OCP Express)](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692855)。
   
 ## 前提条件
 
