400e RN add bp version

--- a/en-US/9.release-notes/101.enterprise-edition-history-release/1.V3.2/96.ob-323.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/1.V3.2/96.ob-323.md
@@ -354,3 +354,88 @@ The MySQL-compatible version numbers in MySQL mode are displayed since OceanBase
 * The fourth digit in the version number V3.2.3 BP4 is increased to 1. The fourth digit in the version number is an internal version number and indicates the technical solution for the product upgrade.
 * We recommend that the number of partitions created on a single OBServer does not exceed 100,000.
 * The OBServer supports text editing by using prepared statements since OceanBase Database V3.2.3 BP5. ODP supports this feature since V3.2.7.1.
+
+## V3.2.3 BP6
+
+### Version information
+
+* Release date: November 15, 2022
+* Version: V3.2.3 BP6
+
+### Enhanced features
+
+* You can change the AccessKey ID and AccessKey Secret during data backup and recovery. The backup feature of OceanBase Database of earlier versions allows you to specify an Alibaba Cloud Object Storage Service (OSS), Tencent Cloud Object Storage (COS), or Huawei Object Storage Service (OBS) bucket as the backup destination, but does not support the modification of access_id or access_key of the backup destination during the backup. If you want to change the AccessKey ID and AccessKey Secret, you must stop the log backup and change the backup directory.  Therefore, this version provides the `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` command for you to modify the AccessKey ID and AccessKey Secret of the backup destination. The relevant content in the GCONF system is updated and saved accordingly. Note:
+  * Before you run the command to update the AccessKey ID and AccessKey Secret specified for the OSS, COS, or OBS bucket, we recommend that you stop the ongoing secondary backup task. We also recommend that you delete the old AccessKey ID and AccessKey Secret one hour after you run the command.
+  * If you modify the AccessKey ID and AccessKey Secret during a secondary backup task, and the task is stuck, you must force cancel the task and change the directory to continue.
+* You can specify the query range in an IN expression to improve the query performance. An IN expression can be considered a special equality expression. When a filter predicate contains an index, OceanBase Database first searches for data in the specified range in the indexed table based on the range determined by the predicate, thus avoiding full table scanning and improving the query efficiency.
+* Table API supports the Filter() and QueryAndMutate() functions. If you call only the Filter() function, it supports the LT, GT, LE, GE, NE, and EQ comparison operators. The FilterList() function is also supported. You can specify multiple Filter() functions in a FilterList() function by using the AND and OR relational operators.
+* Scalar functions are supported. A scalar function is a function that returns one value per row. For example, the ABS() function takes a numeric column as the argument and returns the absolute value of each value in the column.  Example: `SELECT {FN ABS(-1)} FROM DUAL;`
+* Partition routing is optimized. OBProxy can obtain the default value of a column, which improves the routing accuracy.
+* Data security is enhanced. The Transparent Data Encryption (TDE) feature is integrated with Alibaba Cloud Key Management Service (KMS).
+
+### Fixed issues
+
+* The error code 4013 is returned because the checksum values of the primary table and the index table are inconsistent when the `SELECT FOR UPDATE` statement and the major compaction task are executed in parallel.
+* The major compaction task times out because a NULL value is written for the LOB data type during the major compaction.
+* The INSERT operation on a temporary table times out and exits without releasing the memory.
+* In Oracle mode, the error code 4016 is returned during the execution of a hierarchical query due to different parameter values.
+* In a public cloud environment, microblock prefetching increases I/Os when repeated I/O requests are sent and causes idle I/Os.
+* The OBServer node fails due to the abnormal closure of a cursor when the entity of the cursor is simultaneously used by multiple sessions at a high concurrency.
+* The error code 5889 is returned during the execution of the `GOTO LABEL` statement in a loop.
+* The execution of the `ALTER SYSTEM BACKUP DATABASE` statement times out because the schema information of the node is too much.
+* The progress of an Extended Architecture (XA) transaction is slow and all tenant threads are occupied due to the large number of participants in the transaction commit process, which causes excessive traffic of remote procedure calls (RPCs) between OBServer nodes.
+* When an SQL statement is executed in PS mode in an Oracle tenant, the following error message is returned because the value of the bound variable is not real: `field list ambiguously defined`.
+* When an SQL statement is executed in an Oracle tenant, the ORDER BY clause supports only valid columns. Constants or aliases are unsupported.
+* When a DDL statement is executed in PL, the data in the temporary table is not cleared.
+
+### Usage notes
+
+* OceanBase Database V3.2.3 BP4 and later are compatible with the MySQL version number format, such as 5.7.25-OceanBase-v3.2.3.1. We recommend that you use the latest supporting tools.
+* The fourth digit in the version number of OceanBase Database V3.2.3 BP4 is increased to 1. The fourth digit in the version number is an internal version number and indicates the technical solution for the product upgrade.
+* We recommend that you do not create more than 100 thousand partitions on a single OBServer.
+* OBServer supports text editing by using prepared statements since OceanBase Database V3.2.3 BP5. OBProxy supports this feature since V3.2.7.1.
+* OceanBase Database V3.2.3 BP6 and later can obtain the default values of a column to improve the routing accuracy. This feature is supported by OBProxy V3.2.9 and later.
+* OceanBase Database V3.2.3 BP6 and later support KMS storage encryption. To use this feature, you must upgrade the version of libloblog to V3.2.4 or later, and then upgrade the version of OBServer to V3.2.3 BP6.
+
+<main id="notice" type='notice'>
+  <h4>Notice</h4>
+  <p>OceanBase Database V3.2.3 BP5 can be directly upgraded to V3.2.4, but OceanBase Database V3.2.3 BP6 cannot. Instead, it can be upgraded to V3.2.4 BP1.</p>
+</main>
+
+## V3.2.3 BP7
+
+### Version information
+
+* Release date: January 19, 2023
+* Version: V3.2.3 BP7
+
+## Enhancements
+
+* Supported `FROM_BASE64()` and `TO_BASE64()` functions in MySQL mode.
+* Allowed you to grant privileges on the `DBMS_RESOURCE_MANAGER` system package by using the GRANT syntax.
+* Optimized the access performance of the `information_schema.table_constraints` virtual table.
+
+## Compatibility changes
+
+Changed the value range of the `internal_sql_execute_timeout` parameter to [1,000us, 1h]. The maximum value is changed from 10min to 1h, and the default value 30s remains unchanged.
+
+## Bug fixes
+
+* Fixed an issue where tables created by using CTAS were mistakenly deleted.
+* Fixed a bug where memory leaks occurred when indexes are created on JSON generated columns.
+* Fixed a bug where the execution result of `MERGE INTO` was incorrect when a plan hit the `plan cache`.
+* Fixed a bug where errors are returned when the LPAD function processes special characters (ASCII codes: 0x03, 0x04, 0x05, and 0x06).
+* Fixed the error `field list ambiguously defined` occurred during PS execution due to identical column names in SQL subqueries.
+* Fixed the `extend_size` error caused by out-of-bounds exception in `dbms_sql.column_value`. This error would result in memory allocation and access errors.
+* Fixed a bug where `INSERT IGNORE INTO` statements could hang if a freeze or minor compaction was triggered during execution.
+* Fixed a bug where newly created partitions could not be found in  `DBA/ALL/USER_TAB_SUBPARTITIONS` after a maintenance operation was performed on a template-based subpartition, such as partition creation.
+* Fixed a bug where an error occurred when attempting to access `JSON PATH SEEK` of an internal subnode in an empty `JSON object`. This issue is not only involved in `json_extract`  scenarios but also scenarios where `JSON paths` are used, such as `JSON PATH:where col1->'$."data"."a"' = '123'` in a WHERE condition.
+
+## Considerations
+
+* We recommend that you create no more than 100,000 partitions on a single OBServer node.
+* The fourth digit in the version number (V3.2.3 BP4) is for internal use and indicates the technical solution for the product upgrade.
+* OBServer supports text editing by using prepared statements since OceanBase Database V3.2.3 BP5. ODP supports this feature since V3.2.7.1.
+* Since OceanBase Database V3.2.3 BP6, default column values can be obtained to improve routing accuracy. ODP supports this feature since V3.2.9.
+* The MySQL version number format, such as 5.7.25-OceanBase-v3.2.3.1, is supported since OceanBase Database V3.2.3 BP4. Use the latest components as required.
+* KMS storage encryption is supported since OceanBase Database V3.2.3 BP6. To use this feature, upgrade the version of libloblog to V3.2.4 or later, and then upgrade the version of OBServer to V3.2.3 BP6.
