--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
@@ -1,6 +1,6 @@
 # 通过 OCP 部署 OceanBase 集群
 
-本文以 x86 架构的 CentOS Linux 7.9 镜像作为环境介绍如何使用 OBD 白屏部署 OceanBase 数据库。
+本文以 x86 架构的 CentOS Linux 7.9 镜像作为环境介绍如何使用 OCP 白屏部署 OceanBase 数据库。
 
 ## 前提条件
 
