--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -1,102 +1,89 @@
 # 在 Kubernetes 集群中部署 OceanBase 数据库
 
-本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库。
-
-ob-operator 与其他 operator 一样，旨在让 OceanBase 以容器的方式，无缝运行在 Kubernetes 集群上。ob-operator 现已支持 OceanBase 集群的创建、删除，完整的节点生命周期管理、ob-proxy 管理，后续会支持租户管理、多 Kubernetes 集群等功能。
-
-您可按照以下步骤通过 ob-operator 来部署 OceanBase 数据库。
-
-## 部署 CRD
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
-```
+本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库。使用 ob-operator 可以简化 OceanBase 在 Kubernetes 中的部署和运维。
 
 ## 部署 ob-operator
 
-### 使用默认配置部署 ob-operator
+ob-operator 可以通过以下两种方式进行部署。
 
-```bash
+### 使用 Helm 部署
+
+您可执行以下命令部署 ob-operator。
+
+```shell
+helm repo add ob-operator https://oceanbase.github.io/ob-operator/
+helm install ob-operator ob-operator/ob-operator --namespace=oceanbase-system --create-namespace  --version=1.1.0
+```
+
+### 使用配置文件部署
+
+您可执行如下命令使用默认配置部署 ob-operator。
+
+```shell
+# deploy CRD
+kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+
+# deploy ob-operator
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
 ```
 
-### 自定义部署 ob-operator
+#### ob-operator 自定义
 
-您也可以根据您的配置修改 `operator.yaml`。
-例如在 operator.yaml 中添加启动参数 `--cluster-name`，含义为 ob-operator 只处理 `cluster` 值与自身启动参数 `--cluster-name` 的值相同的 CRD。
+如果您需要对 ob-operator 进行自定义修改，可执行如下命令下载配置文件。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p><code>--cluster-name</code> 的值需要与 obcluster 配置中的 <code>cluster</code> 配置一致。</p>
-  </main>
-
-参考以下部分配置文件进行修改：
-
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: ob-operator-controller-manager
-  namespace: oceanbase-system
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      control-plane: controller-manager
-  template:
-    metadata:
-      labels:
-        control-plane: controller-manager
-    spec:
-      containers:
-      - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
-        - --cluster-name=cn
-        command:
-        - /manager
-        image: ob-operator:latest
-        imagePullPolicy: Always
-        name: manager
+```shell
+# download the config file
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
 ```
 
-## 配置 Kubernetes 节点 label
+根据自身需求修改配置文件后，执行如下命令进行自定义部署。
 
-您需将 Kubernetes 节点配置 label，label 需要与 obcluster.yaml 中的 `nodeSelector` 配置相匹配。ob-operator 会将 Pod 调度到具有相应 label 的节点上。
-推荐配置 label 的 key 为 `topology.kubernetes.io/zone`。不同 Zone 推荐配置不同的 label 以做容灾。
-
-```bash
-kubectl label node nodename topology.kubernetes.io/zone=zonename
-kubectl label node ${node_name} topology.kubernetes.io/zone=${zone_name}
+```shell
+# after making some modification
+kubectl apply -f crd.yaml
+kubectl apply -f operator.yaml
 ```
-
-## 部署 local-path-provisioner
-
-ob-operator 默认配置中使用了 local-path-provisioner，需要提前准备好
-
-部署命令:
-
-```text
-kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
-```
-
-更多信息可以参考 <https://github.com/rancher/local-path-provisioner>
 
 ## 部署 OceanBase 集群
 
-### 使用默认配置部署 OceanBase 集群
+### 部署前准备
 
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
+#### 配置 Kubernetes 节点 label
+
+ob-operator 会根据配置文件中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 Kubernetes 的 node 节点配置 label, Kubernetes 中一般会有可用区的 label `topology.kubernetes.io/zone`，可以直接使用这个 label，或者单独为 OceanBase 设置 node 节点的 label。
+<!-- 怎么直接使用这个 label，是  kubectl label node node1 topology.kubernetes.io/zone=zone1 这样么-->
+您可以通过如下命令来设置 node 的 label。
+
+```shell
+kubectl label node ${node_name} ${label_key}=${label_value}
+
+# for example
+kubectl label node node1 ob.zone=zone1
 ```
 
-### 自定义部署 OceanBase 集群
+#### 部署 local-path-provisioner
 
-您也可以在 obcluster.yaml 中根据自己的配置做一些修改。
-参考以下部分配置文件进行修改：
+ob-operator 在部署 OceanBase 数据库时需要创建 PVC 作为 OceanBase 数据库的存储，出于性能考虑，推荐使用本地存储, 本文中使用 local-path-provisioner 来管理 PVC。
+
+部署命令如下：
+<!-- 需确认是否存在适配性问题，每一个版本都可以使用 24 版本的 local-path-provisioner 么-->
+```text
+原：kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
+现：kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.24/deploy/local-path-storage.yaml
+```
+
+更多信息可以参考 [local-path-provisioner](https://github.com/rancher/local-path-provisioner)。
+
+### 部署 OceanBase 集群
+<!-- 部署 OB集群和 ODP 时是否支持使用默认配置进行部署 -->
+OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。您可通过如下命令下载 obcluster 的配置文件。
+
+```bash
+kubectl https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
+```
+
+配置文件内容示例如下。
 
 ```yaml
 apiVersion: cloud.oceanbase.com/v1
@@ -106,7 +93,8 @@ metadata:
   namespace: obcluster
 spec:
   imageRepo: oceanbasedev/oceanbase-cn
-  tag: 4.0.0-snapshot-20230130110559
+  tag: v4.1.0.0-100000192023032010
+  imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
     - cluster: cn
@@ -114,21 +102,21 @@ spec:
       - name: zone1
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone1
+          ob.zone: zone1
         replicas: 1
       - name: zone2
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone2
+          ob.zone: zone2
         replicas: 1
       - name: zone3
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone3
+          ob.zone: zone3
         replicas: 1
       parameters:
-        - name: freeze_trigger_percentage
-          value: "30"
+        - name: log_disk_size
+          value: "40G"
   resources:
     cpu: 2
     memory: 10Gi
@@ -142,43 +130,62 @@ spec:
       - name: log
         storageClassName: "local-path"
         size: 30Gi
+      - name: obagent-conf-file
+        storageClassName: "local-path"
+        size: 1Gi
+    volume:
+        name: backup
+        nfs:
+          server: ${nfs_server_address}
+          path: /opt/nfs
+          readOnly: false
 ```
 
-主要配置介绍：
+主要配置介绍如下。
 
 - `imageRepo`：OceanBase 镜像 repo。
 
 - `tag`：OceanBase 镜像 tag。
-  
-- `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同。
-- `parameters`：按需配置, 自定义的一些 OceanBase 配置项。
-  
-- `cpu`：建议配置为大于 2 的整数，小于 2 会引发系统异常。
-  
-- `memory`：建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
-  
-- `data-file`：该部分为 OceanBase 数据库系统配置项 `datafile_size` 的大小，建议为 Memory 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
-  
-- `data-log`：该部分为 OceanBase 数据库系统配置项 `data_dir` 的大小，建议为 Memory 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
-  
-- `log`：该部分为 OceanBase 数据库系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
 
-## 部署 ODP
+- `imageObagent`: OBAgent 的镜像，用来做 OceanBase 集群的监控数据采集。
+  
+- `cluster`：按需配置，如果需要在该 Kubernetes 中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同（默认值为 `cn`）。
 
-### 使用默认配置部署 ODP
+- `nodeSelector`: 当前 Zone 的 node 选择策略，按照 node 的 label 进行匹配。
 
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
+- `parameters`：按需配置, 自定义的 OceanBase 数据库配置项。
+  
+- `cpu`：Pod 的 CPU 资源，建议配置为大于 2 的整数，小于 2 会引发系统异常。
+  
+- `memory`：Pod 的 Memory 资源，建议配置值大于 10 Gi，小于 10 Gi 会引发系统异常。
+  
+- `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClass`，用作 OceanBase 的数据目录，建议至少配置为 `memory` 大小的 3 倍以上。
+  
+- `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`，用作 OceanBase 的 Clog 目录，建议大小至少配置为 `memory` 大小的 5 倍以上。
+
+- `obagent-conf-file`：OBAgent 配置文件目录存储配置, 用来存放 OBAgent 配置文件, 不需要配置特别大，一般配置大小为 1Gi 就可以。
+  
+- `log`：用作备份数据的存储，无备份需求可以不配置，但是集群创建好之后无法再另外添加，需要提前做好规划。
+
+配置文件修改之后可以通过如下命令进行部署：
+
+```shell
+kubectl apply -f obcluster.yaml
 ```
 
-### 自定义部署 ODP
+### 部署 ODP
+<!-- 是否支持使用默认配置部署 ODP，使用默认配置时，RS_LIST 如何配置 -->
+ODP 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 ODP 的配置文件：
 
-您也可以在 obproxy.yaml 中根据自己的配置做一些修改。
-参考以下部分配置文件进行修改：
+```shell
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
+```
+
+deployment 配置文件内容如下：
 
 ```yaml
-# deployment
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -188,7 +195,7 @@ spec:
   selector:
     matchLabels:
       app: obproxy
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -196,7 +203,7 @@ spec:
     spec:
       containers:
         - name: obproxy
-          image: oceanbase/obproxy-ce:3.2.3
+          image: oceanbasedev/obproxy-ce:4.1.0.0-7
           ports:
             - containerPort: 2883
               name: "sql"
@@ -213,8 +220,22 @@ spec:
             limits:
               memory: 2Gi
               cpu: "1"
----
-# service
+```
+
+主要环境变量配置说明：
+
+- APP_NAME：ODP 的应用名称。
+
+- OB_CLUSTER：ODP 连接的 OceanBase 集群名。
+<!-- 介绍没有看懂需要怎么配置 -->
+- RS_LIST：OceanBase 集群的 rs_list，这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST` 和 `SVC_OB_TEST_SERVICE_PORT` 来配置，环境变量的名字和 OceanBase 数据库的集群名有关，其中 `OB_TEST` 部分是 OceanBase 集群名，需要转换成大写和下划线。
+<!-- 原本的介绍，所以这两个环境变量会自动生成么，生成后配置文件会自动调用？ -->
+- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
+
+service 配置中会开放两个端口，一个用来作 sql 连接的端口，一个是监控数据的采集端口。service 配置文件内容如下：
+
+```yaml
+# service.yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -225,24 +246,45 @@ spec:
   selector:
     app: obproxy
   ports:
-    - name: "tcp"
+    - name: "sql"
       port: 2883
       targetPort: 2883
       nodePort: 30083
+    - name: "prometheus"
+      port: 2884
+      targetPort: 2884
+      nodePort: 30084
 ```
 
-主要环境变量配置说明：
+### 连接 OceanBase 集群
 
-- `APP_NAME`: ODP 的 appname。
+推荐通过 ODP 来连接 OceanBase，在部署好 OceanBase 数据库和 ODP 后，您可通过以下命令来获取 ODP 的 service 连接地址。
+<!-- 这里的 1.1.1.1 是示例 IP 对么 -->
+```shell
+kubectl get svc ${servicename} -n ${namespace}
 
-- `OB_CLUSTER`: ODP 连接的 OceanBase 集群名。
+# for example
+kubectl get svc obproxy-service -n obcluster
 
-- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
+# output
+NAME              TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)                         AGE
+obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/TCP   1m
+```
 
-## 部署 prometheus
+您可以通过 CLUSTER-IP 和 PORT 的方式进行连接，对应的连接命令如下。
 
-### 使用默认配置部署 prometheus
+```shell
+# without password
+mysql -h1.1.1.1 -P2883 -uroot oceanbase -A -c
 
+# with password
+mysql -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+```
+
+## 监控 OceanBase 数据库
+
+### 部署 prometheus
+<!-- 是否支持使用默认配置进行部署 -->
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
@@ -313,9 +355,9 @@ scrape_configs:
 浏览器打开 prometheus 的地址，查看 Status -> Targets, 验证 `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, `obagent-monitor-extra` 下的 Endpoint 都是 up 状态
 点击 Graph, 可以输入 `PromQL` 表达式进行查询
 
-## 部署 grafana
-
-### 使用默认配置部署 grafana
+### 部署 grafana
+<!-- 是否支持默认配置部署 -->
+#### 使用默认配置部署 grafana
 
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
