--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
@@ -37,13 +37,13 @@
 
 ### timestamp 与 scn 选取约束
 
-`timestamp` 与 `scn` 需要大于等于数据备份视图 `CDB_OB_BACKUP_SET_FILES` 中记录的数据备份的最小恢复位点 `MIN_RESTORE_SCN`，小于等于日志归档视图 `CDB_OB_ARCHIVE_LOG` 中的贵大归档位点 `CHECKPOINT_SCN`。由于日志归档可能出现断流，因此恢复位点的选择还需要考虑日志归档的不连续区间，对于可恢复区间的选择则可能是分段的。
+`timestamp` 与 `scn` 需要大于等于数据备份视图 `CDB_OB_BACKUP_SET_FILES` 中记录的数据备份的最小恢复位点 `MIN_RESTORE_SCN`，小于等于日志归档视图 `CDB_OB_ARCHIVE_LOG` 中的最大归档位点 `CHECKPOINT_SCN`。由于日志归档可能出现断流，因此恢复位点的选择还需要考虑日志归档的不连续区间，对于可恢复区间的选择则可能是分段的。
 
 物理恢复的可恢复区间如下图所示。
 
 ![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/%E5%8F%AF%E6%81%A2%E5%A4%8D%E5%8C%BA%E9%97%B4.png)
 
-图中，用户一共发起了 3 次日志归档，且 round_id 分别为 1、2、3，和 5 次数据备份。其中：
+图中，用户一共发起了 3 次日志归档，且 `piece_id` 分别为 1、2、3，和 5 次数据备份。其中：
 
 * `log_archive_piece:1` 以及 `backup_full_set=1` 和 `backup_inc_set=2` 的数据已经被清理。
 
