--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
@@ -56,7 +56,7 @@
 
    * `UNTIL TIME= timestamp`：用于指定的恢复终点，恢复到该位点为止，且包括该位点。指定 `timestamp` 必须以 `=` 连接。`timestamp` 仅支持 `YYYY-MM-DD HH24:MI:SS.FF` 格式, 精确到纳秒。
 
-      如何选取 `timestamp` 的详细说明，请参见 [物理恢复相关参数介绍](../../6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md)。
+      关于如何选取 `timestamp` 的详细说明，请参见 [物理恢复相关参数介绍](../../6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md)。
 
    * `restore_option` 支持指定 `pool_list`、`locality`、`primary_zone`、`kms_encrypt`, 其中 `pool_list` 为必选项, 其余为可选项。
 
