410快速上手和旁路导入低错修改

--- a/zh-CN/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
+++ b/zh-CN/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
@@ -16,9 +16,9 @@ OceanBase 数据库支持旁路导入的方式向数据库插入数据，即 Oce
 
 目前 OceanBase 数据库支持以下语句进行旁路导入：
 
-* `LOAD /*+ APPEND */ DATA`
+* `LOAD /*+ direct */ DATA`
 
-* `INSERT /*+ APPEND */ INTO SELECT`
+* `INSERT /*+ append */ INTO SELECT`
 
 ## 注意事项
 
