--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
@@ -10,7 +10,7 @@
 
   如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroup。
 
-* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/1.create-user-of-mysql-mode.md)。
+* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/1.create-user-of-mysql-mode.md)。
 
 ## 背景信息
 
@@ -42,7 +42,7 @@
 
    * `COMMENT`：填写资源组的备注信息。
 
-   创建成功后，可以查询 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_CONSUMER_GROUPS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/208.oceanbase-dba_rsrc_consumer_groups.md)。
+   创建成功后，可以查询 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `oceanbase.DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/208.oceanbase-dba_rsrc_consumer_groups.md)。
 
 3. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN` 子程序，创建资源管理计划。
 
@@ -58,7 +58,7 @@
   
    * `COMMENT`：填写资源管理计划的备注信息。
 
-   创建成功后，可以查询 `oceanbase.DBA_RSRC_PLANS` 视图进行确认。有关 `oceanbase.DBA_RSRC_PLANS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLANS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/205.oceanbase-dba_rsrc_plans-mysql.md)。
+   创建成功后，可以查询 `oceanbase.DBA_RSRC_PLANS` 视图进行确认。有关 `oceanbase.DBA_RSRC_PLANS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLANS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/205.oceanbase-dba_rsrc_plans-mysql.md)。
 
 4. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN_DIRECTIVE` 子程序，创建资源管理计划内容。用于启用资源管理计划时，限制资源组所使用的 CPU 资源和 IOPS 资源。
 
@@ -104,9 +104,9 @@
 
    创建成功，可以查询 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图和 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
 
-   有关 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_RSRC_PLAN_DIRECTIVES](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/206.oceanbase-dba_rsrc_plan_directives.md)。
+   有关 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/206.oceanbase-dba_rsrc_plan_directives.md)。
 
-   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/204.oceanbase.dba_ob_rsrc_io_directives.md)。
+   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/204.oceanbase.dba_ob_rsrc_io_directives.md)。
 
 5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING`子程序，根据实际使用场景，创建用户级资源隔离匹配规则。
 
@@ -154,7 +154,7 @@
 
       * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
 
-   创建成功后，可以查询 `oceanbase.DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `oceanbase.DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_GROUP_MAPPINGS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/207.oceanbase-dba_rsrc_group_mappings.md)。
+   创建成功后，可以查询 `oceanbase.DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `oceanbase.DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_GROUP_MAPPINGS](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/207.oceanbase-dba_rsrc_group_mappings.md)。
 
 6. 为资源组启用合适的资源管理计划。
 
