400ofuse 密码脱敏和低错修改

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
@@ -21,13 +21,13 @@
    * 通过 ODP 连接的方式
 
       ```sql
-      $mysql -h10.10.10.1 -uusername@obmysql#obdemo -P2883 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uusername@obmysql#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      $mysql -h10.10.10.1 -uobdemo:obmysql:username -P2883 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uobdemo:obmysql:username -P2883 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -59,7 +59,7 @@
    * 通过直连方式
 
       ```sql
-      $mysql -h10.10.10.1 -uusername@obmysql -P2881 -ppassword -c -A oceanbase
+      $mysql -h10.10.10.1 -uusername@obmysql -P2881 -p****** -c -A oceanbase
       ```
 
       参数说明：
