--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -26,7 +26,7 @@
 联系 OceanBase 数据库部署人员或者管理员获取相应的数据库连接串，例如：
 
 ```sql
-obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
+obclient  -h100.88.xx.xx -usys@oracle -p****** -P2881
 ```
 
 数据库连接串包含了访问数据库所需的参数信息，在创建应用程序前，可通过数据库连接串验证登录数据库，保证连接串参数信息正确。
@@ -209,7 +209,7 @@ int main(int argc, char *argv[])
   /*设置服务器，用户名和密码*/
   strcpy(strServerName, "172.30.xx.xx:2881");
   strcpy(strUserName, "s**@oracle");
-  strcpy(strPassword, "**1***");
+  strcpy(strPassword, "******");
   /*初始化 OCI 应用环境*/
   OCIInitialize(OCI_DEFAULT, NULL, NULL, NULL, NULL);
   /*初始化环境句柄*/
@@ -326,7 +326,7 @@ int main(int argc, char *argv[])
 ```c
 strcpy(strServerName, "172.30.xx.xx:2881");
 strcpy(strUserName, "s**@oracle");
-strcpy(strPassword, "***1**");
+strcpy(strPassword, "******");
 ```
 
 * **strServerName**：取自 `-h` 和 `-P` 参数，`IP:port`。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
