--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
@@ -34,7 +34,7 @@ jdbc-1.proxool.alias=test
 jdbc-1.proxool.driver-class=com.oceanbase.jdbc.Driver
 jdbc-1.proxool.driver-url=jdbc:oceanbase://10.100.xxx.xxx:30035/test
 jdbc-1.user=test@tt3
-jdbc-1.password=test
+jdbc-1.password=****
 
 jdbc-1.proxool.maximum-connection-count=8
 jdbc-1.proxool.minimum-connection-count=5
