--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -19,13 +19,13 @@
    * 通过 ODP 连接的方式
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       或者
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -p****** -c -A oceanbase
       ```
 
       参数说明：
@@ -57,7 +57,7 @@
    * 通过直连方式
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant -P2881 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
       参数说明：
