--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
@@ -42,7 +42,7 @@ spring:
     driver-class-name: com.alipay.oceanbase.jdbc.Driver
 #    username: admin@mysql
     username: admin@oracle
-    password: admin
+    password: ******
   jpa:
     hibernate:
       ddl-auto: update
