--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -16,9 +16,9 @@ OceanBase 数据库社区版支持多种部署方式：
 
 ## 标准部署
 
-* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [使用命令行部署 OceanBase 数据库生产环境](2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md)
+* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [通过 OBD 白屏部署 OceanBase 集群](2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md)。
 
-* 对于 kubernetes 环境，建议使用 ob-operator 的方式部署；具体操作参见 [在 Kubernetes 集群中部署 OceanBase 数据库](../5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md)
+* 对于 kubernetes 环境，建议使用 ob-operator 的方式部署；具体操作参见 [在 Kubernetes 集群中部署 OceanBase 数据库](../5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md)。
 
 ## 在线体验
 
