--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
@@ -361,4 +361,4 @@ Query OK, 1 row affected
 * [系统配置项总览](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
 * [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
 * [创建租户](../5.create-oceanbase-tenant-command-line/2.create-tenant.md)
-* [单机部署转分布式部署](../../../../7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/3.single-machine-deployment-online-to-distributed.md)
+* [单机部署转分布式部署](../../../../6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md)
