--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
@@ -354,5 +354,5 @@ Query OK, 0 rows affected
 ## 相关文档
 
 * [连接方式概述](../../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
-* [启动或停止 Zone](../../../2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/4.start-or-stop-a-zone.md)
-* [ALTER SYSTEM PARAMETER](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/9.alter-system-parameter-of-oracle-mode.md)
+* [启动或停止 Zone](../../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/4.start-or-stop-a-zone.md)
+* [ALTER SYSTEM PARAMETER](../../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/9.alter-system-parameter-of-oracle-mode.md)
