--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -1,11 +1,13 @@
 # 在 Kubernetes 集群中部署 OceanBase 数据库
 
-本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库。
-
-ob-operator 是一个 K8s operator, 可以简化 OceanBase 在 K8s 中的部署和运维。
+本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库, 目前我们测试了 K8s 1.23.6 版本，其他版本中部署如果有问题，欢迎和我们联系。
+本文主要分为三部分
+1. 部署 ob-operator
+2. 部署 OceanBase
+2. 监控 OceanBase
 
 ## 部署 ob-operator
-
+ob-operator 是一个 K8s operator, 可以简化 OceanBase 在 K8s 中的部署和运维。
 ob-operator 可以通过两种方式进行部署
 
 ### 使用 Helm 部署 ob-operator
@@ -43,7 +45,7 @@ kubectl apply -f operator.yaml
 
 #### 配置 Kubernetes 节点 label
 
-ob-operator 会根据配置文件中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 K8s 的 node 节点配置 label, K8s 中一般会有可用区的 label `topology.kubernetes.io/zone`, 可以直接使用这个 label, 或者单独为 OceanBase 设置 node 节点的 label。
+ob-operator 会根据 OceanBase 的配置文件 `obcluster.yaml` 中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 K8s 的 node 节点配置 label。
 
 您可以通过如下命令来设置 node 的 label
 
@@ -67,7 +69,7 @@ kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisione
 
 ### 部署 OceanBase 集群
 
-OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。
+OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的[配置文件](https://github.com/oceanbase/ob-operator/blob/master/deploy/obcluster.yaml)进行自定义的修改。
 您可通过如下命令下载 obcluster 的配置文件。
 ```bash
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
@@ -136,11 +138,11 @@ spec:
 - `imageRepo`：OceanBase 镜像 repo。
 - `tag`：OceanBase 镜像 tag。
 - `imageObagent`: OBAgent 的镜像，用来做 OceanBase 的监控数据采集。
-- `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同 (默认值为cn) 。
-- `nodeSelector`: 当前 zone 的 node 选择策略，按照 node 的 label 进行匹配。
+- `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 配置文件中的启动参数 `--cluster-name` 相同 (默认值为cn) 。
+- `nodeSelector`: 当前 zone 的 node 选择策略，按照 node 的 label 进行匹配, 该配置即上文部署前准备中配置 Kubernetes 节点 label 所用配置。
 - `parameters`：按需配置, 自定义的 OceanBase 配置项。
-- `cpu`：Pod 的 CPU 资源，建议配置值 > 2。
-- `memory`：Pod 的 Memory 资源, 建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
+- `cpu`：Pod 的 CPU 资源，要求配置值 >= 2。
+- `memory`：Pod 的 Memory 资源, 要求配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
 - `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 的数据目录， 建议为大小至少配置为 memory 大小的 3 倍以上。
 - `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`, 用作 OceanBase 的 Clog 目录， 建议大小至少配置为 memory 大小的 5 倍以上。
 - `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 进程日志的存放目录, 建议大小至少配置 30Gi 以上。
@@ -154,7 +156,7 @@ kubectl apply -f obcluster.yaml
 
 
 ### 部署 OBProxy
-OBProxy 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。
+OBProxy 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的[配置文件](https://github.com/oceanbase/ob-operator/tree/master/deploy/obproxy)进行自定义的修改。
 您可通过如下命令下载 OBProxy 的配置文件。
 ```bash
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
@@ -220,7 +222,7 @@ spec:
       nodePort: 30084
 ```
 
-主要环境变量配置说明：
+主要环境变量和配置说明：
 
 - `APP_NAME`: OBProxy 的 appname。
 - `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
@@ -261,7 +263,7 @@ mysql -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
 ### 部署 prometheus
 
 #### 部署方式
-您可根据 ob-operator 中的 prometheus 配置文件作为参考，可以通过如下命令下载配置文件
+您可根据 ob-operator 中的 prometheus [配置文件](https://github.com/oceanbase/ob-operator/tree/master/deploy/prometheus)作为参考，可以通过如下命令下载配置文件
 ```bash
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
@@ -313,7 +315,7 @@ scrape_configs:
 
 - service 和 port 说明:
 
-  - OceanBase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 OceanBase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
+  - OceanBase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service 用来获取 exporter 地址， service 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 OceanBase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
   - OBProxy: 需要配置对应的 OBProxy 的 service 和 port name
 
 - 监控指标的请求路径:
@@ -338,7 +340,7 @@ kubectl apply -f service.yaml
 ### 部署 grafana
 
 #### 部署方式
-您可根据 ob-operator 中的 prometheus 配置文件作为参考，可以通过如下命令下载配置文件
+您可根据 ob-operator 中的 grafana [配置文件](https://github.com/oceanbase/ob-operator/tree/master/deploy/grafana)作为参考，可以通过如下命令下载配置文件
 ```bash
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
