--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -8,7 +8,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 如果部署的 OceanBase 数据库要实现资源隔离，那么在部署 OceanBase 数据库之前要先配置 cgroup。
 
-有关资源隔离和配置 cgroup 的更多信息，请参见 [资源隔离概述](../../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/1.resource-isolation-overview.md) 和 [配置 cgroup](../../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/1.config-cgroups-of-oracle-mode.md)。
+有关资源隔离和配置 cgroup 的更多信息，请参见 [资源隔离概述](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md) 和 [配置 cgroup](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md)。
 
 ## 前提条件
 
