--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -186,14 +186,14 @@ partition_count | subpartition_count:
 |                       参数                       |                描述                   |
 |------------------------------------------------|----------------------------------------------------------------------------------------|
 | ADD                                            | 增加列，目前不支持增加主键列。      |
-| MODIFY \[COLUMN\]                              | 修改列属性。     |
+| MODIFY COLUMN                             | 修改列属性。     |
 | MODIFY CONSTRAINT                              | 修改约束的状态为开启或关闭，只支持外键约束和 `CHECK` 约束。    |
-| DROP \[PRIMARY KEY\]                           | 删除主键。<br>**说明** 对于 Oracle 模式，如果表是外键信息的父表，则不允许删除主键。|
-| DROP \[COLUMN\]                                | 删除列，不允许删除主键列或者包含索引的列。   |
-| ADD \[UNIQUE INDEX\]                           | 增加唯一索引。       |
-| ADD \[INDEX\]                                  | 增加普通索引      |
-| ALTER \[INDEX\]                                | 修改索引属性。      |
-| ADD \[PARTITION\]                              | 增加分区。    |
+| DROP PRIMARY KEY                          | 删除主键。<br>**说明** 对于 Oracle 模式，如果表是外键信息的父表，则不允许删除主键。|
+| DROP COLUMN                               | 删除列，不允许删除主键列或者包含索引的列。   |
+| ADD UNIQUE                          | 增加唯一索引。       |
+| ADD INDEX                                  | 增加普通索引      |
+| ALTER INDEX                              | 修改索引属性。      |
+| ADD PARTITION                              | 增加分区。    |
 | DROP {PARTITION \| SUBPARTITION}               | 删除分区： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，删除指定的分区（如果指定分区下存在二级分区，会同时删除该一级分区下的所有二级分区），包括分区定义和其中的数据，同时对分区上存在的本地索引进行维护。</li>   <li> `SUBPARTITION`：针对 \*-Range、\*-List 类型的二级分区，删除指定的二级分区，包括分区定义和其中的数据。同时对分区上存在的本地索引进行维护。</li> </ul>   如果指定 `UPDATE GLOBAL INDEXES`，则删除分区时会同步更新全局索引；如果不指定，分区表上的全局索引需要处于不可用状态。 多个分区名称之间用逗号分隔。 <br>**注意**  删除分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。 |
 | REORGANIZE \[PARTITION\]                       | 分区重组。   |
 | TRUNCATE {PARTITION \| SUBPARTITION}           | 删除分区数据： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，清除指定分区中的全部数据（如果指定分区下存在二级分区，会同时清除该一级分区下的所有二级分区中的数据），同时对分区上存在的本地索引进行维护。</li>   <li> `SUBPARTITION`：针对 \*-Range、\*-List 类型的二级分区，清除指定二级分区中的全部数据。同时对分区上存在的本地索引进行维护。</li> </ul>   如果指定 `UPDATE GLOBAL INDEXES`，则清除分区数据时会同步更新全局索引；如果不指定，分区表上的全局索引需要处于不可用状态。 多个分区名称之间用逗号分隔。 <br>**注意**  删除分区数据时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。       |
@@ -202,7 +202,6 @@ partition_count | subpartition_count:
 | SET TABLEGROUP                                 | 设置表归属于哪个表组。   |
 | DROP \[CONSTRAINT\]                            | 删除约束。    |
 | SET BLOCK_SIZE                                 | 设置 Partition 表 `BLOCK` 大小。      |
-| SET REPLICA_NUM                                | 设置表的副本数（指表的副本总数）。       |
 | SET COMPRESSION                                | 设置表的压缩方式。     |
 | SET USE_BLOOM_FILTER                           | 设置是否使用 BloomFilter。       |
 | SET COMMENT                                    | 设置注释信息。    |
@@ -314,7 +313,7 @@ partition_count | subpartition_count:
   obclient> INSERT INTO tbl2 VALUES('2','3','2');
   Query OK, 1 row affected 
   ```
-  
+
 * 为非模板化二级分区表 `tbl3` 的一级分区 `p1` 下添加二级分区 `p1_r4`。
 
   ```sql
