--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -58,11 +58,6 @@ column_definition:
     [DEFAULT const_value] [AUTO_INCREMENT]
     [NULL | NOT NULL] [[PRIMARY] KEY] [UNIQUE [KEY]] comment
 
-index_desc:
-   (column_desc_list) [index_type] [index_option_list]
-
-fulltext_index_desc:
-   (column_desc_list) CTXCAT(column_desc_list) [index_option_list]
 
 column_desc_list:
     column_desc [, column_desc ...]
@@ -73,11 +68,6 @@ column_desc:
 references_clause:
      REFERENCES table_name [ (column_name, column_name ...) ] [ON DELETE {CASCADE}]
 
-index_type:
-    USING BTREE
-
-index_option_list:
-    index_option [ index_option ...]
 
 index_option:
       [GLOBAL | LOCAL]
@@ -193,33 +183,32 @@ partition_count | subpartition_count:
 
 ## 语法说明
 
-|                       参数                       |                                                                                                                                                                                                                                                          描述                                                                                                                                                                                                                                                           |
-|------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| ADD                                            | 增加列，目前不支持增加主键列。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| MODIFY \[COLUMN\]                              | 修改列属性。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| MODIFY CONSTRAINT                              | 修改约束的状态为开启或关闭，只支持外键约束和 `CHECK` 约束。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| DROP \[PRIMARY KEY\]                                       | 删除主键。<br>**说明** 对于 Oracle 模式，如果表是外键信息的父表，则不允许删除主键。|
-| DROP \[COLUMN\]                                | 删除列，不允许删除主键列或者包含索引的列。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| ADD \[UNIQUE INDEX\]                           | 增加唯一索引。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| ADD \[INDEX\]                                  | 增加普通索引                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| ALTER \[INDEX\]                                | 修改索引属性。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| ADD \[PARTITION\]                              | 增加分区。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+|                       参数                       |                   描述                            |
+|------------------------------------------------|--------------------------------------------------------------------------------------------------|
+| ADD                                            | 增加列，目前不支持增加主键列。            |
+| MODIFY COLUMN                             | 修改列属性。         |
+| MODIFY CONSTRAINT                              | 修改约束的状态为开启或关闭，只支持外键约束和 `CHECK` 约束。         |
+| DROP PRIMARY KEY                                       | 删除主键。<br>**说明** 对于 Oracle 模式，如果表是外键信息的父表，则不允许删除主键。|
+| DROP COLUMN                               | 删除列，不允许删除主键列或者包含索引的列。       |
+| ADD UNIQUE                           | 增加唯一索引。      |
+| ADD INDEX                                  | 增加普通索引        |
+| ALTER INDEX                               | 修改索引属性。   |
+| ADD PARTITION                             | 增加分区。        |
 | DROP {PARTITION \| SUBPARTITION}               | 删除分区： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，删除指定的分区（如果指定分区下存在二级分区，会同时删除该一级分区下的所有二级分区），包括分区定义和其中的数据，同时对分区上存在的本地索引进行维护。</li>   <li> `SUBPARTITION`：针对 \*-Range、\*-List 类型的二级分区，删除指定的二级分区，包括分区定义和其中的数据。同时对分区上存在的本地索引进行维护。</li> </ul>   如果指定 `UPDATE GLOBAL INDEXES`，则删除分区时会同步更新全局索引；如果不指定，分区表上的全局索引需要处于不可用状态。 多个分区名称之间用逗号分隔。 <br>**注意**  删除分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。 |
-| REORGANIZE \[PARTITION\]                       | 分区重组。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| REORGANIZE \[PARTITION\]                       | 分区重组。      |
 | TRUNCATE {PARTITION \| SUBPARTITION}           | 删除分区数据： <ul><li> `PARTITION`：针对 Range、List 类型的一级分区，清除指定分区中的全部数据（如果指定分区下存在二级分区，会同时清除该一级分区下的所有二级分区中的数据），同时对分区上存在的本地索引进行维护。</li>   <li> `SUBPARTITION`：针对 \*-Range、\*-List 类型的二级分区，清除指定二级分区中的全部数据。同时对分区上存在的本地索引进行维护。</li> </ul>   如果指定 `UPDATE GLOBAL INDEXES`，则清除分区数据时会同步更新全局索引；如果不指定，分区表上的全局索引需要处于不可用状态。 多个分区名称之间用逗号分隔。 <br>**注意**  删除分区数据时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者一些异常情况。       |
-| RENAME \[TO\] table_name                       | 表重命名。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| DROP \[TABLEGROUP\]                            | 删除表组。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| SET TABLEGROUP                                 | 设置表归属于哪个表组。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| DROP \[CONSTRAINT\]                            | 删除约束。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| SET BLOCK_SIZE                                 | 设置 Partition 表 `BLOCK` 大小。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| SET REPLICA_NUM                                | 设置表的副本数（指表的副本总数）。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| SET COMPRESSION                                | 设置表的压缩方式。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
-| SET USE_BLOOM_FILTER                           | 设置是否使用 BloomFilter。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
-| SET COMMENT                                    | 设置注释信息。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| SET PROGRESSIVE_MERGE_NUM                      | 设置渐进合并步数，取值范围是 \[1,64\]。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| parallel_clause                                | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 `1`，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li></ul>  **注意**  当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 `ALTER SESSION` 指定的并行度 \> 表级别的并行度。                                                                                                                                                                                                                    |
-| {ENABLE \| DISABLE} CONSTRAINT constraint_name | 修改约束的状态，支持外键约束或 `CHECK` 约束。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| MODIFY PRIMARY KEY                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| RENAME \[TO\] table_name                       | 表重命名。     |
+| DROP \[TABLEGROUP\]                            | 删除表组。         |
+| SET TABLEGROUP                                 | 设置表归属于哪个表组。        |
+| DROP \[CONSTRAINT\]                            | 删除约束。    |
+| SET BLOCK_SIZE                                 | 设置 Partition 表 `BLOCK` 大小。     |
+| SET COMPRESSION                                | 设置表的压缩方式。  |
+| SET USE_BLOOM_FILTER                           | 设置是否使用 BloomFilter。         |
+| SET COMMENT                                    | 设置注释信息。       |
+| SET PROGRESSIVE_MERGE_NUM                      | 设置渐进合并步数，取值范围是 \[1,64\]。      |
+| parallel_clause                                | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 `1`，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li></ul>  **注意**  当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 `ALTER SESSION` 指定的并行度 \> 表级别的并行度。      |
+| {ENABLE \| DISABLE} CONSTRAINT constraint_name | 修改约束的状态，支持外键约束或 `CHECK` 约束。         |
+| MODIFY PRIMARY KEY                             |  修改主键。         |
 
 ## 示例
 
@@ -283,6 +272,35 @@ partition_count | subpartition_count:
     2 rows in set
     ```
 
+* 为表 `tbl2` 创建唯一性索引。
+  
+  ```sql
+  obclient> CREATE TABLE tbl2 (col1 NUMBER(30) PRIMARY KEY,col2 VARCHAR(50), col3 INT);
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLE tbl2 ADD CONSTRAINT constraint_TBL2 UNIQUE (col2, col3);
+  Query OK, 0 rows affected 
+
+  obclient [SYS]> DESC tbl2;
+  +-------+--------------+------+-----+---------+-------+
+  | FIELD | TYPE         | NULL | KEY | DEFAULT | EXTRA |
+  +-------+--------------+------+-----+---------+-------+
+  | COL1  | NUMBER(30)   | NO   | PRI | NULL    | NULL  |
+  | COL2  | VARCHAR2(50) | YES  | MUL | NULL    | NULL  |
+  | COL3  | NUMBER(38)   | YES  | NULL | NULL    | NULL  |
+  +-------+--------------+------+-----+---------+-------+
+  3 rows in set
+
+  obclient> INSERT INTO tbl2 VALUES('1','2','2');
+  Query OK, 1 row affected 
+
+  obclient> INSERT INTO tbl2 VALUES('2','2','2');
+  ORA-00001: unique constraint '2-2' for key 'CONSTRAINT_TBL2' violated
+
+  obclient> INSERT INTO tbl2 VALUES('2','3','2');
+  Query OK, 1 row affected 
+  ```
+  
 * 为非模板化二级分区表 `tbl3` 的一级分区 `p1` 下添加二级分区 `p1_r4`。
 
   ```sql
