Fix some doc issues

--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.delete-resource-specification.md
@@ -20,9 +20,11 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。如果查询结果的 `NAME` 列中无该资源规格名称，则表示该资源规格未被指定给资源池；如果查询结果的 `NAME` 列中有该资源规格名称，则表示资源规格已被指定给资源池。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。
 
-    示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
+    示例如下，如果查询结果的 `UNIT_NAME` 列中无该资源规格名称，则表示该资源规格未被指定给资源池；如果查询结果的 `UNIT_NAME` 列中有该资源规格名称，则表示资源规格已被指定给资源池。
+
+    确认资源规格 `S2_unit_config` 已经不在使用中。
 
     ```shell
     obclient [oceanbase]> SELECT a.UNIT_CONFIG_ID, a.NAME AS UNIT_NAME, b.NAME AS POOL_NAME FROM oceanbase.DBA_OB_UNIT_CONFIGS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.UNIT_CONFIG_ID=a.UNIT_CONFIG_ID;
