--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/4.reduce-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/4.reduce-replica.md
@@ -36,7 +36,7 @@
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
-   <p>此处仅以减少 1 个 Zone 为示例，实际操作中注意添加的 Zone 的数量需要能够满足多数派原则。</p>
+   <p>此处仅以减少 1 个 Zone 为示例，实际操作中注意减少后的 Zone 的数量需要能够满足多数派原则。</p>
 </main>
 
 1. 使用 root 用户登录到集群的 sys 租户。
