--- a/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
@@ -54,7 +54,7 @@ obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS limit 10;
 
 用户设置的 Primary Zone 会由 OceanBase 数据库基于各个 Zone 所在的 Region 进行改写，改写规则如下：
 
-1. 将用户设置的 Primary Zone 中的所有 Zone 对应的 Region 列出。例如：primary_zone 为 `hz1,hz2;sh1,sh2;sz1` 对应的 `primary_region` 的列表为 `hz,hz;sh,sh;sz` 。
+1. 将用户设置的 Primary Zone 中的所有 Zone 对应的 Region 列出。例如：`primary_zone` 为 `hz1,hz2;sh1,sh2;sz1` 对应的 `primary_region` 的列表为 `hz,hz;sh,sh;sz` 。
 
 2. 将 `primary_region` 中重复的 Region 去掉，去掉规则为保留第一个出现的 Region，其他 Region 后续重复的 Region 移除，例如 `hz1,hz2;sh1,sh2;sz1` ，其 `primary_region` 转化为列表 `hz;sh;sz` 。
   
@@ -62,19 +62,19 @@ obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS limit 10;
 
 例如：假设共有 9 个 Zone，`sh1`、`sh2`、`sh3` 三个 Zone 在 Region `SH`，`hz1`、`hz2`、`hz3` 三个 Zone 在 Region `HZ`，`sz1`、`sz2`、`sz3` 三个 Zone 在 Region `SZ`。
 
-* 用户设置的 `primary_zone` 为 `'sh1;hz1;hz2;sz1'`; 按照改写规则 1 得到 primary_region 为 `'SH;HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_zone` 为 `'SH;HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1;sh2,sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。
+* 用户设置的 `primary_zone` 为 `'sh1;hz1;hz2;sz1'`; 按照改写规则 1 得到 primary_region 为 `'SH;HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_region` 为 `'SH;HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1;sh2,sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。
   
   解释如下：
 
     三个 Region 的优先级为 `SH` > `HZ` > `SZ`。Region `SH` 中的 Zone 的优先级高于 Region `HZ` 和 Region `SZ` 中 Zone 的优先级。Region `HZ` 中的 Zone 的优先级高于 Region `SZ` 中 Zone 的优先级。各 Region 内每个 Zone 的优先级为：在 Region `SH` 中 `sh1` > `sh2` = `sh3`，在 Region `HZ` 中 `hz1` > `hz2` > `hz3`，在 Region `SZ` 中 `sz1` > `sz2` = `sz3`。因此最终得到新的 Primary Zone 为 `'sh1;sh2,sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。Leader 会优先分布在 `sh1` 上，当 `sh1` 发生故障时，Leader 会依照上面的 Primary Zone 优先级依次分布在 `sh2` 和 `sh3`。
 
-* 用户设置的 `primary_zone` 为 `'sh1,sh2;hz1;hz2;sz1'`; 按照改写规则 1 得到 `primary_region` 为 `'SH,SH;HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_zone` 为 `'SH;HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1,sh2;sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。
+* 用户设置的 `primary_zone` 为 `'sh1,sh2;hz1;hz2;sz1'`; 按照改写规则 1 得到 `primary_region` 为 `'SH,SH;HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_region` 为 `'SH;HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1,sh2;sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。
   
   解释如下：
 
     三个 Region 的优先级为 `SH` > `HZ` > `SZ`。Region `SH` 中的 Zone 的优先级高于 Region `HZ` 和 Region `SZ` 中 Zone 的优先级。Region `HZ` 中的 Zone 的优先级高于 Region `SZ` 中 Zone 的优先级。各 Region 内每个 Zone的优先级为：在 Region `SH` 中 `sh1` = `sh2` > `sh3`，在 Region `HZ` 中 `hz1` > `hz2` > `hz3`，在 Region `SZ` 中 `sz1` > `sz2` = `sz3`。因此最终得到新的 Primary Zone 为 `'sh1,sh2;sh3;hz1;hz2;hz3;sz1;sz2,sz3'`。Leader 会优先平均分布在 `sh1` 和 `sh2` 上，当 `sh1` 和 `sh2` 发生故障时，Leader 会依照上面 Primary Zone 优先级依次分布在 `sh3`。
 
-* 用户设置的 `primary_zone` 为 `'sh1,hz1;hz2;sz1'`; 按照改写规则 1 得到 `primary_region` 为 `'SH,HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_zone` 为 `'SH,HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1,hz1;hz2;sh2,sh3,hz3;sz1;sz2,sz3'`。
+* 用户设置的 `primary_zone` 为 `'sh1,hz1;hz2;sz1'`; 按照改写规则 1 得到 `primary_region` 为 `'SH,HZ;HZ;SZ'`。按照改写规则 2 得到 `primary_region` 为 `'SH,HZ;SZ'`。按规则 3 得到改写后 `primary_zone` 为 `'sh1,hz1;hz2;sh2,sh3,hz3;sz1;sz2,sz3'`。
   
   解释如下：
 
