--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -1,6 +1,6 @@
 # 手动触发转储
 
-系统租户可以通过 `ALTER SYSTEM MINOR FREEZE` 命令手动触发转储。手动转储支持租户级别、Zone 级别、Serverer 级别、日志流级别和 Tablet 级别。
+系统租户可以通过 `ALTER SYSTEM MINOR FREEZE` 命令手动触发转储。手动转储支持租户级别、Zone 级别、Server 级别、日志流级别和 Tablet 级别。
 
 ## 操作步骤
 
