--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
@@ -8,7 +8,7 @@
 
 2. 查看转储进度，可以查看转储未完成的数据量及预期完成时间等信息。
 
-   `GV$OB_TABLET_COMPACTION_PROGRESS` 视图用于展示 Tablet 级别 Compaction 的进度信息，且仅展示正在运行的任务，任务结束后就不再展示。具体查询语句如下：
+   `GV$OB_TABLET_COMPACTION_PROGRESS` 视图用于展示 Tablet 级别 Compaction 任务的进度信息，且仅展示正在运行的任务，任务结束后就不再展示。具体查询语句如下：
 
    ```shell
    obclient> SELECT * FROM oceanbase.GV$OB_TABLET_COMPACTION_PROGRESS\G;
@@ -35,13 +35,15 @@
 
    * `TYPE`：表示 Compaction 任务的类型。
    
-     * `MINI_MERGE`：表示转储/L0 Compaction 任务，Memtable 通过转储变成 SSTable。
+     * `MINOR_MERGE`：minor，多个 Mini SSTable 合成一个 Minor SSTable。
 
-     * `MAJOR_MERGE`：表示合并任务。
+     * `MINI_MERGE`：转储，冻结 MemTable 通过转储变成 Mini SSTable。
 
-     * `MINI_MINOR_MERGE` ：表示 L1 Compaction 任务，多个 Mini SSTable 合成一个。
+     * `MEDIUM_MERGE`：表示分区级合并。
 
-     * `BUF_MINOR_MERGE` ：表示生成特殊的 Buf Minor SSTable 的 Compaction 任务。
+     * `MAJOR_MERGE`：表示合并。
+
+     * `META_MAJOR_MERGE` ：Buffer 表转储。
    
    * `STATUS`：表示任务状态。任务正在运行中时，该字段值为 `NODE_RUNNING`。
 
