--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
@@ -11,12 +11,12 @@
    `GV$OB_TABLET_COMPACTION_PROGRESS` 视图用于展示 Tablet 级别 Compaction 任务的进度信息，且仅展示正在运行的任务，任务结束后就不再展示。具体查询语句如下：
 
    ```shell
-   obclient> SELECT * FROM oceanbase.GV$OB_TABLET_COMPACTION_PROGRESS\G;
+   obclient> SELECT * FROM oceanbase.GV$OB_TABLET_COMPACTION_PROGRESS WHERE TYPE='MINI_MERGE'\G;
    *************************** 1. row ***************************
                          SVR_IP: xx.xx.xx.xx
                        SVR_PORT: 2401
                       TENANT_ID: 1002
-                           TYPE: MEDIUM_MERGE
+                           TYPE: MINI_MERGE
                           LS_ID: 1001
                       TABLET_ID: 1152921504606847235
                  COMPACTION_SCN: 1680514780195130031
@@ -35,9 +35,9 @@
 
    * `TYPE`：表示 Compaction 任务的类型。
    
-     * `MINOR_MERGE`：minor，多个 Mini SSTable 合成一个 Minor SSTable。
+     * `MINOR_MERGE`：表示 Minor，多个 Mini SSTable 合成一个 Minor SSTable。
 
-     * `MINI_MERGE`：转储，冻结 MemTable 通过转储变成 Mini SSTable。
+     * `MINI_MERGE`：表示转储，冻结 MemTable 通过转储变成 Mini SSTable。
 
      * `MEDIUM_MERGE`：表示分区级合并。
 
