[视图名错误]OB_TRANSACTION_PARTICIPANTS缺少了V
$OB_TRANSACTION_PARTICIPANTS改为V$OB_TRANSACTION_PARTICIPANTS(两处都要改）

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
@@ -103,7 +103,7 @@ FLUSHED_LOG_SIZE: 0
 1 row in set
 ```
 
-视图 `oceanbase.$OB_TRANSACTION_PARTICIPANTS` 中的字段及详细说明请参见 [oceanbase.$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/54.v-ob_transaction_participants-of-mysql-mode.md)。
+视图 `oceanbase.V$OB_TRANSACTION_PARTICIPANTS` 中的字段及详细说明请参见 [oceanbase.V$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/54.v-ob_transaction_participants-of-mysql-mode.md)。
 
 ## 相关文档
 
